# sfml3-game-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: template-cleanup.yml
SFML-CMake-Prac/archive(old_attempts)/: README.md
SFML-CMake-Prac/archive(old_attempts)/include/: Game.hpp
SFML-CMake-Prac/archive(old_attempts)/src/: Game.cpp
SFML-CMake-Prac/config/: AssetsManifest.toml  Player.toml
SFML-CMake-Prac/include/: AppContext.hpp  Application.hpp  ConfigManager.hpp  GlobalEventManager.hpp  InputManager.hpp  InputSystem.hpp  Player.hpp  RandomMachine.hpp  ResourceManager.hpp  State.hpp  StateManager.hpp  TomlImp.hpp  Utils.hpp  WindowManager.hpp
SFML-CMake-Prac/include/ECS/: Components.hpp  EntityFactory.hpp  Systems.hpp
SFML-CMake-Prac/include/Managers/: ConfigManager.hpp  GlobalEventManager.hpp  ResourceManager.hpp  StateManager.hpp  WindowManager.hpp
SFML-CMake-Prac/include/Utilities/: Logger.hpp  RandomMachine.hpp  Utils.hpp
SFML-CMake-Prac/resources/sprites/: knight.txt
SFML-CMake-Prac/src/: Application.cpp  ConfigManager.cpp  GlobalEventManager.cpp  InputManager.cpp  InputSystem.cpp  Player.cpp  RandomMachine.cpp  State.cpp  StateManager.cpp  Utils.cpp  WindowManager.cpp
SFML-CMake-Prac/src/ECS/: EntityFactory.cpp  Systems.cpp
SFML-CMake-Prac/src/Managers/: ConfigManager.cpp  GlobalEventManager.cpp  ResourceManager.cpp  StateManager.cpp  WindowManager.cpp
SFML-CMake-Prac/src/Utilities/: RandomMachine.cpp  Utils.cpp
sfml3-game-template/config/: AssetsManifest.toml  WindowConfig.toml
sfml3-game-template/docs/: README.md  cmake.md  ecs.md  game-loop.md  getting-started.md  managers.md  recommended-practices.md  utilities.md
sfml3-game-template/include/: AppContext.hpp  AppData.hpp  Application.hpp  AssetKeys.hpp  State.hpp
sfml3-game-template/include/ECS/: Components.hpp  EntityFactory.hpp  Systems.hpp
sfml3-game-template/include/Managers/: ConfigManager.hpp  GlobalEventManager.hpp  ResourceManager.hpp  StateManager.hpp  WindowManager.hpp
sfml3-game-template/include/Utilities/: Logger.hpp  Utils.hpp
sfml3-game-template/src/: Application.cpp  Main.cpp  State.cpp
sfml3-game-template/src/ECS/: EntityFactory.cpp  Systems.cpp
sfml3-game-template/src/Managers/: ConfigManager.cpp  GlobalEventManager.cpp  ResourceManager.cpp  StateManager.cpp  WindowManager.cpp
sfml3-game-template/src/Utilities/: RandomMachine.cpp  Utils.cpp
